--- a/Firmware/Chameleon-Mini/Makefile
+++ b/Firmware/Chameleon-Mini/Makefile
@@ -6,9 +6,9 @@ SHELL = /bin/sh
 
 #Supported configurations
 SETTINGS    += -DCONFIG_MF_CLASSIC_1K_SUPPORT
-#SETTINGS    += -DCONFIG_MF_CLASSIC_1K_7B_SUPPORT
+SETTINGS    += -DCONFIG_MF_CLASSIC_1K_7B_SUPPORT
 SETTINGS    += -DCONFIG_MF_CLASSIC_4K_SUPPORT
-#SETTINGS    += -DCONFIG_MF_CLASSIC_4K_7B_SUPPORT
+SETTINGS    += -DCONFIG_MF_CLASSIC_4K_7B_SUPPORT
 SETTINGS    += -DCONFIG_MF_ULTRALIGHT_SUPPORT
 #SETTINGS	+= -DCONFIG_ISO14443A_SNIFF_SUPPORT
 #SETTINGS	+= -DCONFIG_ISO14443A_READER_SUPPORT
